--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
       }
       li {
         padding: 0.5rem;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
+        letter-spacing: 2px;
+        color: white;
+      }
+      a {
+        font-size: 1.25rem;
+        color: lightblue;
+        font-family: "Courier New", Courier, monospace;
       }
       #result {
         display: flex;
